adding modeInformation and updating swagger
